--- a/markdown/.category.yaml
+++ b/markdown/.category.yaml
@@ -2,3 +2,6 @@ title: Разметка
 order: 2
 refs:
   drawio: /diagrams/drawio
+private:
+  - ekaterina.pavlova@ics-it.ru
+  - stanislav.yargunkin@ics-it.ru
